cluster/agent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agent
  namespace: athena
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: agent.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agent
                port:
                  number: 80
